Remove PowerMock from the Slack GCF sample.
Instead of using Whitebox, use package-private constructor overloads
to supply the values needed by the test.